--- a/.github/workflows/new-changes-validation.yml
+++ b/.github/workflows/new-changes-validation.yml
@@ -21,8 +21,21 @@ jobs:
 
       - name: Checkout ${{ github.event.repository.name }}
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
       - name: ${{ matrix.trimming }} ${{ matrix.memory-management }} build
         run: v ${{ matrix.trimming }} ${{ matrix.memory-management }} .
+
+  test:
+    needs: simple-build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install V
+        uses: vlang/setup-v@v1.3
+        with:
+          check-latest: true
+
+      - name: Checkout ${{ github.event.repository.name }}
+        uses: actions/checkout@v3
+
+      - name: Run tests
+        run: v test .
