--- a/.github/workflows/new-changes-validation.yml
+++ b/.github/workflows/new-changes-validation.yml
@@ -27,6 +27,12 @@ jobs:
         with:
           version: 'weekly.2023.08'
 
+      - if: ${{ steps.cache-vlang.outputs.cache-hit != 'true' }}
+        uses: actions/cache/save@v3
+        with:
+          path: /home/runner/work/v-project-basement/v-project-basement/vlang/
+          key: vlang-0.3.3-weekly.2023.08
+
       - name: Checkout ${{ github.event.repository.name }}
         uses: actions/checkout@v3
 
@@ -49,6 +55,12 @@ jobs:
         uses: vlang/setup-v@v1.3
         with:
           version: 'weekly.2023.08'
+
+      - if: ${{ steps.cache-vlang.outputs.cache-hit != 'true' }}
+        uses: actions/cache/save@v3
+        with:
+          path: /home/runner/work/v-project-basement/v-project-basement/vlang/
+          key: vlang-0.3.3-weekly.2023.08
 
       - name: Checkout ${{ github.event.repository.name }}
         uses: actions/checkout@v3
@@ -79,6 +91,12 @@ jobs:
         with:
           version: 'weekly.2023.08'
 
+      - if: ${{ steps.cache-vlang.outputs.cache-hit != 'true' }}
+        uses: actions/cache/save@v3
+        with:
+          path: /home/runner/work/v-project-basement/v-project-basement/vlang/
+          key: vlang-0.3.3-weekly.2023.08
+
       - name: Set up GCC
         run: |
           sudo apt-get update
@@ -96,6 +114,12 @@ jobs:
         with:
           version: '15'
           cached: ${{ steps.cache-llvm.outputs.cache-hit }}
+
+      - if: ${{ steps.cache-llvm.outputs.cache-hit != 'true' }}
+        uses: actions/cache/save@v3
+        with:
+          path: /home/runner/work/v-project-basement/v-project-basement/llvm
+          key: vlang-0.3.3-weekly.2023.08
 
       - name: Checkout ${{ github.event.repository.name }}
         uses: actions/checkout@v3
@@ -123,6 +147,12 @@ jobs:
         with:
           version: 'weekly.2023.08'
 
+      - if: ${{ steps.cache-vlang.outputs.cache-hit != 'true' }}
+        uses: actions/cache/save@v3
+        with:
+          path: /home/runner/work/v-project-basement/v-project-basement/vlang/
+          key: vlang-0.3.3-weekly.2023.08
+
       - name: Cache LLVM and Clang
         id: cache-llvm
         uses: actions/cache@v3
@@ -135,6 +165,12 @@ jobs:
         with:
           version: '15'
           cached: ${{ steps.cache-llvm.outputs.cache-hit }}
+
+      - if: ${{ steps.cache-llvm.outputs.cache-hit != 'true' }}
+        uses: actions/cache/save@v3
+        with:
+          path: /home/runner/work/v-project-basement/v-project-basement/llvm
+          key: vlang-0.3.3-weekly.2023.08
 
       - name: Checkout ${{ github.event.repository.name }}
         uses: actions/checkout@v3
