--- a/.github/workflows/new-changes-validation.yml
+++ b/.github/workflows/new-changes-validation.yml
@@ -72,7 +72,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: ${{ matrix.trimming }} ${{ matrix.memory-management }} build
-        run: v ${{ matrix.trimming }} ${{ matrix.memory-management }} .
+        run: ./home/runner/work/v-project-basement/v-project-basement/vlang/vlang_linux_x64/v ${{ matrix.trimming }} ${{ matrix.memory-management }} .
 
   test:
     needs: simple-build
