--- a/.github/workflows/new-changes-validation.yml
+++ b/.github/workflows/new-changes-validation.yml
@@ -87,8 +87,10 @@ jobs:
           key: vlang-0.3.3-weekly.2023.08
           fail-on-cache-miss: true
 
-      - name: Set up V
-        run: cd /home/runner/work/v-project-basement/v-project-basement/vlang/vlang_linux_x64 && sudo ./v symlink
+      - name: Install V
+        uses: vlang/setup-v@v1.3
+        with:
+          version: 'weekly.2023.08'
 
       - name: Checkout ${{ github.event.repository.name }}
         uses: actions/checkout@v3
@@ -113,8 +115,10 @@ jobs:
           key: vlang-0.3.3-weekly.2023.08
           fail-on-cache-miss: true
 
-      - name: Set up V
-        run: cd /home/runner/work/v-project-basement/v-project-basement/vlang/vlang_linux_x64 && sudo ./v symlink
+      - name: Install V
+        uses: vlang/setup-v@v1.3
+        with:
+          version: 'weekly.2023.08'
 
       - name: Set up GCC
         run: |
@@ -154,8 +158,10 @@ jobs:
           key: vlang-0.3.3-weekly.2023.08
           fail-on-cache-miss: true
 
-      - name: Set up V
-        run: cd /home/runner/work/v-project-basement/v-project-basement/vlang/vlang_linux_x64 && sudo ./v symlink
+      - name: Install V
+        uses: vlang/setup-v@v1.3
+        with:
+          version: 'weekly.2023.08'
 
       - name: Restore LLVM and Clang
         uses: actions/cache/restore@v3
