--- a/.github/workflows/new-changes-validation.yml
+++ b/.github/workflows/new-changes-validation.yml
@@ -222,9 +222,6 @@ jobs:
   gcc-address-sanitizers:
     needs: different-compilers
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        dependent-sanitizer: [null, pointer-compare, pointer-subtract ]
     steps:
       - name: Restore Vlang
         uses: actions/cache/restore@v3
@@ -247,14 +244,14 @@ jobs:
         uses: actions/checkout@v3
 
       - name: GCC address sanitizer ${{ matrix.dependent-sanitizer }}
-        run: v -cc gcc -cflags -fsanitize=address -cflags -fsanitize-address-use-after-scope -cflags -fsanitize=${{ matrix.dependent-sanitizer }} .
+        run: v -cc gcc -cflags -fsanitize=address -cflags -fsanitize-address-use-after-scope \
+             -cflags -fsanitize=pointer-compare \
+             -cflags -fsanitize=pointer-subtract \
+             .
 
   gcc-undefined-sanitizers:
     needs: different-compilers
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        dependent-sanitizer: [null, shift, shift-exponent, shift-base, integer-divide-by-zero, unreachable, vla-bound, 'null', return, signed-integer-overflow, bounds, bounds-strict, alignment, object-size, float-divide-by-zero, float-cast-overflow, nonnull-attribute, returns-nonnull-attribute, bool, enum, vptr, pointer-overflow, builtin ]
     steps:
       - name: Restore Vlang
         uses: actions/cache/restore@v3
@@ -277,4 +274,27 @@ jobs:
         uses: actions/checkout@v3
 
       - name: GCC undefined sanitizer ${{ matrix.dependent-sanitizer }}
-        run: v -cc gcc -cflags -fsanitize=undefined -cflags -fsanitize=${{ matrix.dependent-sanitizer }} .
+        run: v -cc gcc -cflags -fsanitize=undefined \
+             -cflags -fsanitize=shift \
+             -cflags -fsanitize=shift-exponent \
+             -cflags -fsanitize=shift-base \
+             -cflags -fsanitize=integer-divide-by-zero \
+             -cflags -fsanitize=unreachable \
+             -cflags -fsanitize=vla-bound \
+             -cflags -fsanitize=null \
+             -cflags -fsanitize=return \
+             -cflags -fsanitize=signed-integer-overflow \
+             -cflags -fsanitize=bounds \
+             -cflags -fsanitize=bounds-strict \
+             -cflags -fsanitize=alignment \
+             -cflags -fsanitize=object-size \
+             -cflags -fsanitize=float-divide-by-zero \
+             -cflags -fsanitize=float-cast-overflow \
+             -cflags -fsanitize=nonnull-attribute \
+             -cflags -fsanitize=returns-nonnull-attribute \
+             -cflags -fsanitize=bool \
+             -cflags -fsanitize=enum \
+             -cflags -fsanitize=vptr \
+             -cflags -fsanitize=pointer-overflow \
+             -cflags -fsanitize=builtin \
+             .
