--- a/.github/workflows/new-changes-validation.yml
+++ b/.github/workflows/new-changes-validation.yml
@@ -244,10 +244,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: GCC address sanitizer ${{ matrix.dependent-sanitizer }}
-        run: v -cc gcc -cflags -fsanitize=address -cflags -fsanitize-address-use-after-scope \
-             -cflags -fsanitize=pointer-compare \
-             -cflags -fsanitize=pointer-subtract \
-             .
+        run: v -cc gcc -cflags -fsanitize=address -cflags -fsanitize-address-use-after-scope -cflags -fsanitize=pointer-compare -cflags -fsanitize=pointer-subtract .
 
   gcc-undefined-sanitizers:
     needs: different-compilers
@@ -274,27 +271,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: GCC undefined sanitizer ${{ matrix.dependent-sanitizer }}
-        run: v -cc gcc -cflags -fsanitize=undefined \
-             -cflags -fsanitize=shift \
-             -cflags -fsanitize=shift-exponent \
-             -cflags -fsanitize=shift-base \
-             -cflags -fsanitize=integer-divide-by-zero \
-             -cflags -fsanitize=unreachable \
-             -cflags -fsanitize=vla-bound \
-             -cflags -fsanitize=null \
-             -cflags -fsanitize=return \
-             -cflags -fsanitize=signed-integer-overflow \
-             -cflags -fsanitize=bounds \
-             -cflags -fsanitize=bounds-strict \
-             -cflags -fsanitize=alignment \
-             -cflags -fsanitize=object-size \
-             -cflags -fsanitize=float-divide-by-zero \
-             -cflags -fsanitize=float-cast-overflow \
-             -cflags -fsanitize=nonnull-attribute \
-             -cflags -fsanitize=returns-nonnull-attribute \
-             -cflags -fsanitize=bool \
-             -cflags -fsanitize=enum \
-             -cflags -fsanitize=vptr \
-             -cflags -fsanitize=pointer-overflow \
-             -cflags -fsanitize=builtin \
-             .
+        run: v -cc gcc -cflags -fsanitize=undefined -cflags -fsanitize=shift -cflags -fsanitize=shift-exponent -cflags -fsanitize=shift-base -cflags -fsanitize=integer-divide-by-zero -cflags -fsanitize=unreachable -cflags -fsanitize=vla-bound -cflags -fsanitize=null -cflags -fsanitize=return -cflags -fsanitize=signed-integer-overflow -cflags -fsanitize=bounds -cflags -fsanitize=bounds-strict -cflags -fsanitize=alignment -cflags -fsanitize=object-size -cflags -fsanitize=float-divide-by-zero -cflags -fsanitize=float-cast-overflow -cflags -fsanitize=nonnull-attribute -cflags -fsanitize=returns-nonnull-attribute -cflags -fsanitize=bool -cflags -fsanitize=enum -cflags -fsanitize=vptr -cflags -fsanitize=pointer-overflow -cflags -fsanitize=builtin .
