--- a/.github/workflows/new-changes-validation.yml
+++ b/.github/workflows/new-changes-validation.yml
@@ -272,3 +272,43 @@ jobs:
 
       - name: GCC undefined sanitizer ${{ matrix.dependent-sanitizer }}
         run: v -cc gcc -cflags -fsanitize=undefined -cflags -fsanitize=shift -cflags -fsanitize=shift-exponent -cflags -fsanitize=shift-base -cflags -fsanitize=integer-divide-by-zero -cflags -fsanitize=unreachable -cflags -fsanitize=vla-bound -cflags -fsanitize=null -cflags -fsanitize=return -cflags -fsanitize=signed-integer-overflow -cflags -fsanitize=bounds -cflags -fsanitize=bounds-strict -cflags -fsanitize=alignment -cflags -fsanitize=object-size -cflags -fsanitize=float-divide-by-zero -cflags -fsanitize=float-cast-overflow -cflags -fsanitize=nonnull-attribute -cflags -fsanitize=returns-nonnull-attribute -cflags -fsanitize=bool -cflags -fsanitize=enum -cflags -fsanitize=vptr -cflags -fsanitize=pointer-overflow -cflags -fsanitize=builtin .
+
+  vab-compilation:
+    needs: clang-sanitizers, gcc-sanitizers, gcc-address-sanitizers, gcc-undefined-sanitizers
+    runs-on: ubuntu-latest
+    steps:
+      - name: Restore Vlang
+        uses: actions/cache/restore@v3
+        with:
+          path: /home/runner/work/v-project-basement/v-project-basement/vlang/
+          key: vlang-0.3.3-weekly.2023.08
+          fail-on-cache-miss: true
+
+      - name: Install V
+        uses: vlang/setup-v@v1.3
+        with:
+          version: 'weekly.2023.08'
+
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt'
+          java-version: 17
+
+      - name: Setup Android SDK
+        uses: amyu/setup-android@v2
+        with:
+          sdk-version: 31
+          build-tools-version: '33.0.2'
+          ndk-version: '25.2.9519653'
+
+      - name: Checkout ${{ github.event.repository.name }}
+        uses: actions/checkout@v3
+
+      - name: Install vab
+        run: |
+          v install vab
+          v -g ~/.vmodules/vab
+          sudo ln -s ~/.vmodules/vab/vab /usr/local/bin/vab
+
+      - name: Build APK
+        run: vab --min-sdk-version 26 --api 31 --archs 'arm64-v8a' -v 3 .
