--- a/.github/workflows/new-changes-validation.yml
+++ b/.github/workflows/new-changes-validation.yml
@@ -361,3 +361,28 @@ jobs:
 
       - name: Check formatting
         run: v fmt -verify .
+
+  check-docs:
+    needs: [vab-compilation, linux-to-other-platforms-compilation]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Restore Vlang
+        uses: actions/cache/restore@v3
+        with:
+          path: /home/runner/work/v-project-basement/v-project-basement/vlang/
+          key: vlang-0.3.3-weekly.2023.08
+          fail-on-cache-miss: true
+
+      - name: Install V
+        uses: vlang/setup-v@v1.3
+        with:
+          version: 'weekly.2023.08'
+
+      - name: Checkout ${{ github.event.repository.name }}
+        uses: actions/checkout@v3
+
+      - name: Check markdown line length & code examples
+        run: v check-md -hide-warnings .
+
+      - name: Check public methods without documentation
+        run: v missdoc --exclude src/tests/ --verify .
