Fix: make check-formatting job depends on vab-compilation job too

--- a/.github/workflows/new-changes-validation.yml
+++ b/.github/workflows/new-changes-validation.yml
@@ -341,7 +341,7 @@ jobs:
         run: v -os windows .
 
   check-formatting:
-    needs: linux-to-other-platforms-compilation
+    needs: [vab-compilation, linux-to-other-platforms-compilation]
     runs-on: ubuntu-latest
     steps:
       - name: Restore Vlang
