Fix: cache was disabled for Setup Android SDK step in vab-compilation job because it's broken

--- a/.github/workflows/new-changes-validation.yml
+++ b/.github/workflows/new-changes-validation.yml
@@ -300,6 +300,7 @@ jobs:
           sdk-version: 31
           build-tools-version: '33.0.2'
           ndk-version: '25.2.9519653'
+          cache-disabled: true
 
       - name: Checkout ${{ github.event.repository.name }}
         uses: actions/checkout@v3
