--- a/.github/workflows/new-changes-validation.yml
+++ b/.github/workflows/new-changes-validation.yml
@@ -187,7 +187,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Clang ${{ matrix.sanitizer }} sanitizer
-        run: v -cc clang -cflags -fsanitize=${{ matrix.sanitizer }} .
+        run: v -cc clang -cflags -fsanitize=${{ matrix.sanitizer }} test .
 
   gcc-sanitizers:
     needs: different-compilers
@@ -217,7 +217,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: GCC ${{ matrix.sanitizer }} sanitizer
-        run: v -cc gcc -cflags -fsanitize=${{ matrix.sanitizer }} .
+        run: v -cc gcc -cflags -fsanitize=${{ matrix.sanitizer }} test .
 
   gcc-address-sanitizers:
     needs: different-compilers
@@ -244,7 +244,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: GCC address sanitizer ${{ matrix.dependent-sanitizer }}
-        run: v -cc gcc -cflags -fsanitize=address -cflags -fsanitize-address-use-after-scope -cflags -fsanitize=pointer-compare -cflags -fsanitize=pointer-subtract .
+        run: v -cc gcc -cflags -fsanitize=address -cflags -fsanitize-address-use-after-scope -cflags -fsanitize=pointer-compare -cflags -fsanitize=pointer-subtract test .
 
   gcc-undefined-sanitizers:
     needs: different-compilers
@@ -271,7 +271,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: GCC undefined sanitizer ${{ matrix.dependent-sanitizer }}
-        run: v -cc gcc -cflags -fsanitize=undefined -cflags -fsanitize=shift -cflags -fsanitize=shift-exponent -cflags -fsanitize=shift-base -cflags -fsanitize=integer-divide-by-zero -cflags -fsanitize=unreachable -cflags -fsanitize=vla-bound -cflags -fsanitize=null -cflags -fsanitize=return -cflags -fsanitize=signed-integer-overflow -cflags -fsanitize=bounds -cflags -fsanitize=bounds-strict -cflags -fsanitize=alignment -cflags -fsanitize=object-size -cflags -fsanitize=float-divide-by-zero -cflags -fsanitize=float-cast-overflow -cflags -fsanitize=nonnull-attribute -cflags -fsanitize=returns-nonnull-attribute -cflags -fsanitize=bool -cflags -fsanitize=enum -cflags -fsanitize=vptr -cflags -fsanitize=pointer-overflow -cflags -fsanitize=builtin .
+        run: v -cc gcc -cflags -fsanitize=undefined -cflags -fsanitize=shift -cflags -fsanitize=shift-exponent -cflags -fsanitize=shift-base -cflags -fsanitize=integer-divide-by-zero -cflags -fsanitize=unreachable -cflags -fsanitize=vla-bound -cflags -fsanitize=null -cflags -fsanitize=return -cflags -fsanitize=signed-integer-overflow -cflags -fsanitize=bounds -cflags -fsanitize=bounds-strict -cflags -fsanitize=alignment -cflags -fsanitize=object-size -cflags -fsanitize=float-divide-by-zero -cflags -fsanitize=float-cast-overflow -cflags -fsanitize=nonnull-attribute -cflags -fsanitize=returns-nonnull-attribute -cflags -fsanitize=bool -cflags -fsanitize=enum -cflags -fsanitize=vptr -cflags -fsanitize=pointer-overflow -cflags -fsanitize=builtin test .
 
   vab-compilation:
     needs: [clang-sanitizers, gcc-sanitizers, gcc-address-sanitizers, gcc-undefined-sanitizers]
